<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <Button
        android:id="@+id/btnHealth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/check_health"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnSystem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/system_info"
        app:layout_constraintTop_toBottomOf="@id/btnHealth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvStatusResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="12dp"
        android:text="@string/output"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/btnSystem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGoGenerate"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnGoGenerate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_generate"
        app:layout_constraintBottom_toTopOf="@+id/btnGoModels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnGoModels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/models_list"
        app:layout_constraintBottom_toTopOf="@+id/btnGoGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnGoGallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
