<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:padding="12dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_category"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvSubModels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submodel"/>

        <TextView
            android:id="@+id/tvDefaultParams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_parameters"
            android:layout_marginTop="4dp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
